# k8s-nim-operator-odh-poc

./: README.md
air-gapped/: README.md
air-gapped/llm/: profile.yaml  runtime.yaml  service.yaml
air-gapped/mulit-llm/: model-store.yaml  runtime.yaml  service.yaml
cache/: cache.yaml  service.yaml
guardrail/: README.md  nemoguardrails.yaml  role.yaml  route.yaml  service_account.yaml
guardrail/archived/: deployment.yaml  role_binding.yaml  service.yaml
llm-d/: llm-nim-llama-3.1-8b-instruct.yaml  llmisvc.yaml  nimcache.yaml
multi-node/: nimcache-nim.yaml  nimcache.yaml
multi-node/kserve/: inferenceservice.yaml  servingruntime.yaml
multi-node/rhoai/: vllm-inferenceservice.yaml  vllm-servingruntime.yaml
nemo/: README.md
nemo/customizer/: README.md  customizer-model-config.yaml  customizer-training-config.yaml  customizer.yaml  mlflow.values.yaml  postgres-secret.yaml  route.yaml  volcano-oc-rbac.yaml  wandb-secret.yaml
nemo/datastore/: README.md  datastore.yaml  nemo-datastore-default-secrets.yaml  postgres-secret.yaml  route.yaml  s3-secret.yaml
nemo/entitystore/: entitystore.yaml  postgres-secret.yaml  route.yaml
nemo/evaluator/: README.md  argo-config.yaml  argo-sa.yaml  evaluator.yaml  milvus-oc-rbac.yaml  postgres-secret.yaml  route.yaml
nemo/guardrail/: guardrail.yaml  route.yaml
nemo/llamastack/: README.md  configmap.yaml  deployment.yaml  (+2 more)
nemo/llamastack/e2e/: 1_data_preparation.py  2_finetuning_and_inference.py  3_model_evaluation.py  4_adding_safety_guardrails.py  README.md  TESTED_APIS.md  config.py  pyproject.toml
nim/: README.md
(+11 files in other folders)
